# BridgeWind

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakeSettings.json  installer_script.nsi  readme.docx  readme.md
src/: CMakeLists.txt  FileDropWidget.cpp  FileDropWidget.h  ProjectHistoryManager.cpp  ProjectHistoryManager.h  ProjectSaveManager.cpp  ProjectSaveManager.h  SettingsManager.cpp  SettingsManager.h  app_controller.cpp  app_controller.h  aspectratiobutton.cpp  aspectratiobutton.h  bridge_simulation_service.cpp  bridge_simulation_service.h  file_utils.cpp  file_utils.h  flow_data_reader.cpp  flow_data_reader.h  geo_generator.cpp  geo_generator.h  geometry.cpp  geometry.h  geometry_analysis_service.cpp  geometry_analysis_service.h  gmsh2cgns.cpp  gmsh2cgns.h  gmsh_controller.cpp  gmsh_controller.h  gmsh_generator.cpp  gmsh_generator.h  gmsh_reader.cpp  gmsh_reader.h  hypara_generator.cpp  hypara_generator.h  icon.aps  icon.rc  main.cpp  main_gui.cpp  main_headless.cpp  (+29 more)
src/styles/: dark_theme.qss  default_theme.qss
src/translations/: bridgewind_zh_CN.ts
translations/: bridgewind_de_DE.ts  bridgewind_zh_CN.ts
